--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header class="header" id="header">
+      <!-- First nav-container-->
         <div class="nav-container">
             <div class="nav-left">
                 <a href="index.html" class="logo">
@@ -16,21 +17,30 @@
                 </a>
                 <div class="nav-menu">
                     <a href="project.html" class="nav-item">Projects</a>
-                    <a href="products.html" class="nav-item">Products</a>
+                    <a href="shop.html" class="nav-item">Shop</a>
                 </div>
             </div>
-            
             <div class="nav-right">
-                <a href="shop.html" class="nav-item">Shop</a>
                 <a href="cart.html" class="nav-item">Cart</a>
+                <a href="login.html" class="nav-item">Login</a>
                 <button class="search-btn" id="searchBtn">Search</button>
             </div>
-            
             <!-- Search Mode -->
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Start Typing..." id="searchInput">
             </div>
             <button class="menu-toggle" id="menuToggle">☰</button>
+        </div>
+        <!-- Second nav-container-->
+        <div class="nav-dropdown-container">
+            <div class="nav-dropdown">
+                <a href="cart.html" class="nav-item">Shop All</a>
+                <a href="login.html" class="nav-item">Seating</a>
+                <a href="login.html" class="nav-item">Tables</a>
+                <a href="login.html" class="nav-item">Lighting</a>
+                <a href="login.html" class="nav-item">Storage</a>
+                <a href="login.html" class="nav-item">Accessories</a>
+            </div>
         </div>
     </header>
 
