--- a/public/collections.html
+++ b/public/collections.html
@@ -48,6 +48,7 @@
         <div id="products-container" class="products-grid"></div>
     </main>
 
+    <script src="/js/auth.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/collections.js"></script>
 </body>
