--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
             <div>Are you part of a procurement team in need of high-quality, commercial-grade furnishings?</div>
           </div>
           <div class="contact-info">
-            <p>If you answered 'Yes' to any of the above, we’d be delighted to connect with you and share more about how our services can support you.</p>
+            <p>If you answered 'Yes' to any of the above, we'd be delighted to connect with you and share more about how our services can support you.</p>
             <button>Contact Us</button>
           </div>
         </div>
@@ -190,6 +190,7 @@
         </div>
     </footer>
 
+    <script src="/js/auth.js"></script>
     <script src="/js/script.js"></script>
 </body>
 </html>
