best version rn

--- a/public/index.html
+++ b/public/index.html
@@ -77,26 +77,26 @@
           <p>Explore our most sought-after categories — from imported living room furniture to meticulously hand-crafted hardware accessories.</p>
       </div>
       <div class="featured-content">
-        <div class="category-item">
-          <img src="https://store.leibal.com/cdn/shop/files/pk24-wicker-natural-2.jpg?crop=center&height=2048&v=1685311232&width=2048">
-          <p>Seating <span>132</span></p>
-        </div>
-        <div class="category-item">
-          <img src="https://store.leibal.com/cdn/shop/files/the-wall-06-01.jpg?crop=center&height=2048&v=1724704198&width=2048">
-          <p>Tables <span>98</span></p>
-        </div>
-        <div class="category-item">
-          <img src="https://store.leibal.com/cdn/shop/files/HB-ASBereaSandstoneLamps5_Off.jpg?crop=center&height=2048&v=1715823230&width=2048">
-          <p>Lighting <span>56</span></p>
-        </div>
-        <div class="category-item">
-          <img src="https://store.leibal.com/cdn/shop/files/eileen-2.jpg?crop=center&height=2048&v=1715395088&width=2048">
-          <p>Storage <span>27</span></p>
-        </div>
-        <div class="category-item">
-          <img src="https://store.leibal.com/cdn/shop/files/knob-curve-circle.jpg?crop=center&height=2048&v=1704311997&width=2048">
-          <p>Accessories <span>190</span></p>
-        </div>
+        <a href="collections.html?collection=seating" class="category-item">
+          <img src="https://store.leibal.com/cdn/shop/files/pk24-wicker-natural-2.jpg?crop=center&height=2048&v=1685311232&width=2048" alt="Seating">
+          <p>Seating</p>
+        </a>
+        <a href="collections.html?collection=tables" class="category-item">
+          <img src="https://store.leibal.com/cdn/shop/files/the-wall-06-01.jpg?crop=center&height=2048&v=1724704198&width=2048" alt="Tables">
+          <p>Tables</p>
+        </a>
+        <a href="collections.html?collection=lighting" class="category-item">
+          <img src="https://store.leibal.com/cdn/shop/files/HB-ASBereaSandstoneLamps5_Off.jpg?crop=center&height=2048&v=1715823230&width=2048" alt="Lighting">
+          <p>Lighting</p>
+        </a>
+        <a href="collections.html?collection=storage" class="category-item">
+          <img src="https://store.leibal.com/cdn/shop/files/eileen-2.jpg?crop=center&height=2048&v=1715395088&width=2048" alt="Storage">
+          <p>Storage</p>
+        </a>
+        <a href="collections.html?collection=accessories" class="category-item">
+          <img src="https://store.leibal.com/cdn/shop/files/knob-curve-circle.jpg?crop=center&height=2048&v=1704311997&width=2048" alt="Accessories">
+          <p>Accessories</p>
+        </a>
       </div>
     </section>
     
@@ -148,12 +148,11 @@
                 <div class="footer-section">
                     <h3>Store</h3>
                     <ul>
-                        <li><a href="#">Seating</a></li>
-                        <li><a href="#">Tables</a></li>
-                        <li><a href="#">Lighting</a></li>
-                        <li><a href="#">Storage</a></li>
-                        <li><a href="#">Outdoor</a></li>
-                        <li><a href="#">Accessories</a></li>
+                        <li><a href="collections.html?collection=seating">Seating</a></li>
+                        <li><a href="collections.html?collection=tables">Tables</a></li>
+                        <li><a href="collections.html?collection=lighting">Lighting</a></li>
+                        <li><a href="collections.html?collection=storage">Storage</a></li>
+                        <li><a href="collections.html?collection=accessories">Accessories</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
