client search engine

--- a/public/collections.html
+++ b/public/collections.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/images/logo/favicon-two.png" type="image/x-icon">
     <title>Atelien Store — Collections</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/collections.css">
@@ -45,11 +46,72 @@
     </header>
 
     <main class="main-content">
+        <div id="search-results-info"></div>
         <div id="products-container" class="products-grid"></div>
     </main>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-sections">
+                <div class="footer-section">
+                    <h3>Explore</h3>
+                    <ul>
+                        <li><a href="#">Stories</a></li>
+                        <li><a href="#">Architecture</a></li>
+                        <li><a href="#">Interiors</a></li>
+                        <li><a href="#">Furniture</a></li>
+                        <li><a href="#">Lighting</a></li>
+                        <li><a href="#">Objects</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Store</h3>
+                    <ul>
+                        <li><a href="collections.html?collection=seating">Seating</a></li>
+                        <li><a href="collections.html?collection=tables">Tables</a></li>
+                        <li><a href="collections.html?collection=lighting">Lighting</a></li>
+                        <li><a href="collections.html?collection=storage">Storage</a></li>
+                        <li><a href="collections.html?collection=accessories">Accessories</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Information</h3>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Submit</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Connect</h3>
+                    <ul>
+                        <li><a href="#">Pinterest</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Tumblr</a></li>
+                        <li><a href="#">LinkedIn</a></li>
+                        <li><a href="#">TikTok</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section newsletter">
+                    <h3>Newsletter</h3>
+                    <form>
+                        <input type="email" required>
+                        <button type="submit">Send</button>
+                    </form>
+                    <p>©2025 Atelien. All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="/js/auth.js"></script>
     <script src="/js/script.js"></script>
+    <script src="/js/search.js"></script>
     <script src="/js/collections.js"></script>
 </body>
 </html>
