Cart + Check Out system

--- a/public/product.html
+++ b/public/product.html
@@ -119,6 +119,14 @@
         </section>
     </main>
 
+    <!-- Mini Alert Box for Cart Updates -->
+    <div class="cart-alert" id="cartAlert">
+        <div class="alert-content">
+            <span class="alert-message" id="alertMessage"></span>
+            <button class="alert-close" id="alertClose">×</button>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
@@ -180,6 +188,7 @@
 
     <script src="/js/auth.js"></script>
     <script src="/js/script.js"></script>
+    <script src="/js/cart.js"></script>
     <script src="/js/product.js"></script>
 </body>
 </html> 
