Debug + fix a bit
Best version right now next to admin function

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,16 @@
         </div>
     </header>
 
-    <video autoplay loop muted playsinline src="https://store.leibal.com/cdn/shop/t/24/assets/storehomepagedesktop.webm?v=964605202132926281717480789"></video>
+    <video 
+        autoplay 
+        loop 
+        muted 
+        playsinline 
+        preload="auto"
+        id="hero-video"
+        src="https://store.leibal.com/cdn/shop/t/24/assets/storehomepagedesktop.webm?v=964605202132926281717480789">
+        Your browser does not support the video tag.
+    </video>
 
     <!-- product-spotlight -->
     <section class="product-spotlight">
