Product list + Status + Delete
work well

--- a/public/admin-dashboard/overview.html
+++ b/public/admin-dashboard/overview.html
@@ -21,7 +21,7 @@
         <div class="chart-topproduct-row" style="display: flex; gap: 2rem; flex-wrap: wrap; align-items: stretch;">
             <div class="chart-container" style="flex: 2 1 400px; min-width: 320px;">
                 <div class="chart-header">
-                    <h2 class="chart-title">My Cart</h2>
+                    <h2 class="chart-title">Overview</h2>
                 </div>
                 <div class="stats-grid">
                     <div class="stat-card active" id="statProfit" onclick="switchChart('profit')">
