--- a/public/admin-dashboard/product-list.html
+++ b/public/admin-dashboard/product-list.html
@@ -31,7 +31,7 @@
                         <span class="header-product">Product</span>
                         <span class="header-price">Price</span>
                         <span class="header-category">Category</span>
-                        <span class="header-visuality">Visuality</span>
+                        <span class="header-status">Status</span>
                         <span class="header-edit">Edit</span>
                         <span class="header-delete">Delete</span>
                     </div>
@@ -41,6 +41,12 @@
                 </div>
             </div>
         </main>
+    </div>
+    <div class="product-alert" id="productAlert">
+        <div class="alert-content">
+            <span class="alert-message" id="productAlertMessage"></span>
+            <button class="alert-close" id="productAlertClose">×</button>
+        </div>
     </div>
     <script src="js/product-list.js"></script>
 </body>
