--- a/public/admin-dashboard/sidebar.html
+++ b/public/admin-dashboard/sidebar.html
@@ -16,7 +16,7 @@
         <span>Products</span>
         <ul>
           <li><a href="product-list.html"><span class="sidebar-dot"></span>Product List</a></li>
-          <li><a href="product-create.html"><span class="sidebar-dot"></span>Create Product</a></li>
+          <li><a href="create-product.html"><span class="sidebar-dot"></span>Create Product</a></li>
         </ul>
       </li>
       <li>
