--- a/public/admin-dashboard/overview.html
+++ b/public/admin-dashboard/overview.html
@@ -173,5 +173,6 @@
         </div>
     </div>
     <script src="js/chart.js"></script>
+    <script src="js/sidebar-active.js"></script>
 </body>
 </html> 
