--- a/public/admin-dashboard/sidebar.html
+++ b/public/admin-dashboard/sidebar.html
@@ -9,27 +9,29 @@
       <li>
         <span>Dashboard</span>
         <ul>
-          <li><a href="overview.html"><span class="sidebar-dot"></span>Overview</a></li>
+          <li><a href="overview.html" class="sidebar-link"><span class="sidebar-dot"></span>Overview</a></li>
         </ul>
       </li>
       <li>
         <span>Products</span>
         <ul>
-          <li><a href="product-list.html"><span class="sidebar-dot"></span>Product List</a></li>
-          <li><a href="create-product.html"><span class="sidebar-dot"></span>Create Product</a></li>
+          <li><a href="product-list.html" class="sidebar-link"><span class="sidebar-dot"></span>Product List</a></li>
+          <li><a href="edit-product.html" class="sidebar-link"><span class="sidebar-dot"></span>Edit Product</a></li>
+          <li><a href="create-product.html" class="sidebar-link"><span class="sidebar-dot"></span>Create Product</a></li>
         </ul>
       </li>
       <li>
         <span>Discount Coupons</span>
         <ul>
-          <li><a href="order-list.html"><span class="sidebar-dot"></span>Order List</a></li>
-          <li><a href="product-create.html"><span class="sidebar-dot"></span>Create</a></li>
+          <li><a href="coupon-list.html" class="sidebar-link"><span class="sidebar-dot"></span>Coupon List</a></li>
+          <li><a href="coupon-edit.html" class="sidebar-link"><span class="sidebar-dot"></span>Edit Coupon</a></li>
+          <li><a href="create-coupon.html" class="sidebar-link"><span class="sidebar-dot"></span>Create Coupon</a></li>
         </ul>
       </li>
       <li>
         <span>Orders</span>
         <ul>
-          <li><a href="order-list.html"><span class="sidebar-dot"></span>Order List</a></li>
+          <li><a href="order-list.html" class="sidebar-link"><span class="sidebar-dot"></span>Order List</a></li>
         </ul>
       </li>
     </ul>
