Contact Us + Fix bug and CSS

--- a/public/admin-dashboard/sidebar.html
+++ b/public/admin-dashboard/sidebar.html
@@ -32,6 +32,13 @@
         <span>Orders</span>
         <ul>
           <li><a href="order-list.html" class="sidebar-link"><span class="sidebar-dot"></span>Order List</a></li>
+          <li><a href="order-list.html" class="sidebar-link"><span class="sidebar-dot"></span>Order Detail</a></li>
+        </ul>
+      </li>
+      <li>
+        <span>Contact Us</span>
+        <ul>
+          <li><a href="contact-us.html" class="sidebar-link"><span class="sidebar-dot"></span>Contact List</a></li>
         </ul>
       </li>
     </ul>
