--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
           </div>
           <div class="contact-info">
             <p>If you answered 'Yes' to any of the above, we'd be delighted to connect with you and share more about how our services can support you.</p>
-            <button>Contact Us</button>
+            <a href="contact-us.html"><button>Contact Us</button></a>
           </div>
         </div>
       </div>
@@ -151,38 +151,24 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-sections">
-                <div class="footer-section"> 
-                    <h3>Explore</h3>
-                    <ul>
-                        <li><a href="#">Stories</a></li>
-                        <li><a href="#">Architecture</a></li>
-                        <li><a href="#">Interiors</a></li>
-                        <li><a href="#">Furniture</a></li>
-                        <li><a href="#">Lighting</a></li>
-                        <li><a href="#">Objects</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Store</h3>
-                    <ul>
-                        <li><a href="collections.html?collection=seating">Seating</a></li>
-                        <li><a href="collections.html?collection=tables">Tables</a></li>
-                        <li><a href="collections.html?collection=lighting">Lighting</a></li>
-                        <li><a href="collections.html?collection=storage">Storage</a></li>
-                        <li><a href="collections.html?collection=accessories">Accessories</a></li>
-                    </ul>
-                </div>
                 <div class="footer-section">
                     <h3>Information</h3>
                     <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Submit</a></li>
+                        <li><a href="#">About Us</a></li>
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Privacy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
+                <div class="footer-section">
+                  <h3>Store</h3>
+                  <ul>
+                      <li><a href="collections.html?collection=seating">Seating</a></li>
+                      <li><a href="collections.html?collection=tables">Tables</a></li>
+                      <li><a href="collections.html?collection=lighting">Lighting</a></li>
+                      <li><a href="collections.html?collection=storage">Storage</a></li>
+                      <li><a href="collections.html?collection=accessories">Accessories</a></li>
+                  </ul>
+              </div>
                 <div class="footer-section">
                     <h3>Connect</h3>
                     <ul>
