--- a/public/product.html
+++ b/public/product.html
@@ -140,37 +140,23 @@
         <div class="footer-container">
             <div class="footer-sections">
                 <div class="footer-section">
-                    <h3>Explore</h3>
-                    <ul>
-                        <li><a href="#">Stories</a></li>
-                        <li><a href="#">Architecture</a></li>
-                        <li><a href="#">Interiors</a></li>
-                        <li><a href="#">Furniture</a></li>
-                        <li><a href="#">Lighting</a></li>
-                        <li><a href="#">Objects</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Store</h3>
-                    <ul>
-                        <li><a href="collections.html?collection=seating">Seating</a></li>
-                        <li><a href="collections.html?collection=tables">Tables</a></li>
-                        <li><a href="collections.html?collection=lighting">Lighting</a></li>
-                        <li><a href="collections.html?collection=storage">Storage</a></li>
-                        <li><a href="collections.html?collection=accessories">Accessories</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
                     <h3>Information</h3>
                     <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Submit</a></li>
+                        <li><a href="#">About Us</a></li>
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Privacy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
+                <div class="footer-section">
+                  <h3>Store</h3>
+                  <ul>
+                      <li><a href="collections.html?collection=seating">Seating</a></li>
+                      <li><a href="collections.html?collection=tables">Tables</a></li>
+                      <li><a href="collections.html?collection=lighting">Lighting</a></li>
+                      <li><a href="collections.html?collection=storage">Storage</a></li>
+                      <li><a href="collections.html?collection=accessories">Accessories</a></li>
+                  </ul>
+              </div>
                 <div class="footer-section">
                     <h3>Connect</h3>
                     <ul>
@@ -185,7 +171,7 @@
                 <div class="footer-section newsletter">
                     <h3>Newsletter</h3>
                     <form>
-                        <input type="email" placeholder="Enter your email" required>
+                        <input type="email" required>
                         <button type="submit">Send</button>
                     </form>
                     <p>©2025 Atelien. All Rights Reserved.</p>
